[tool.poetry]
name = "PBLCA"
version = "0.1.0"
description = "Check Pinboard links for link rot, and update dead links with archive.org snapshot."
authors = ["contact@danielgplaza.com"]

[tool.poetry.dependencies]
python = "^3.8"
pinboard = "^2.1.8"
requests = "^2.24.0"
tqdm = "^4.48.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
pblca = "pblca.pblca:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
