[tool.poetry]
name = "PBLCA"
version = "0.1.0"
description = "Check Pinboard links for link rot, and update dead links with archive.org snapshot."
authors = ["contact@danielgplaza.com"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
tqdm = "^4.48.2"
mypy = "^0.782"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
pblca = "pblca.pblca:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[mypy]
ignore_errors = false
disallow_untyped_defs = true